--- a/login0.html
+++ b/login0.html
@@ -7,6 +7,7 @@
         margin-left: 0px;
         background-image: url(bglogin.jpg);
         background-size: 100%;
+        opacity: 0.1;
       }
       #d1
           {
